--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,3 +110,8 @@ python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
 asyncio_mode = "auto"
+markers = [
+    "live: marks tests as live integration tests (require API key)",
+    "slow: marks tests as slow-running",
+    "unit: marks tests as unit tests (no external dependencies)",
+]
